# skch

./: CMakeLists.txt  README.md  build_debug.sh  build_release.sh  test.sh
src/: canvas.cpp  canvas.hpp  main.cpp
